bk_ida/gccida/c3/gen_compile_unit_die
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_compile_unit_die/src/dwarf2out.c:11229:29: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
sprintf( producer, "%s %s", lang_hooks_0.name, version_string); 
                            ^~~~~~~~~~~~
                            lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_compile_unit_die/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_compile_unit_die/src/dwarf2out.c:11231:15: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
if ( !strcmp( lang_hooks_0.name, "GNU C++") ) 
              ^~~~~~~~~~~~
              lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_compile_unit_die/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_compile_unit_die/src/dwarf2out.c:11235:20: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
else if ( !strcmp( lang_hooks_0.name, "GNU Ada") ) 
                   ^~~~~~~~~~~~
                   lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_compile_unit_die/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_compile_unit_die/src/dwarf2out.c:11239:20: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
else if ( !strcmp( lang_hooks_0.name, "GNU F77") ) 
                   ^~~~~~~~~~~~
                   lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_compile_unit_die/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_compile_unit_die/src/dwarf2out.c:11243:20: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
else if ( !strcmp( lang_hooks_0.name, "GNU Pascal") ) 
                   ^~~~~~~~~~~~
                   lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_compile_unit_die/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_compile_unit_die/src/dwarf2out.c:11247:20: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
else if ( !strcmp( lang_hooks_0.name, "GNU Java") ) 
                   ^~~~~~~~~~~~
                   lang_hooks
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_compile_unit_die/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_compile_unit_die/src/obj/dwarf2out.o] Error 1
